--- a/3. Angular/ejemplo/src/app/app.component.html
+++ b/3. Angular/ejemplo/src/app/app.component.html
@@ -18,7 +18,22 @@
         <a [routerLink]="['/app','post']">App Post</a>
       </li>
     </ul>
+
   </li>
+  <li>
+    <a [routerLink]="['/lazy-inventario']">Inventario</a>
+    <ul>
+      <li>
+        <a [routerLink]="['/lazy-inventario','bodega']">Bodega</a>
+      </li>
+      <li>
+        <a [routerLink]="['/lazy-inventario','reporte']">Reporte</a>
+      </li>
+    </ul>
+
+  </li>
+
+
 </ul>
 
 
