--- a/3. Angular/ejemplo/src/app/rutas/ruta-login/ruta-login.component.html
+++ b/3. Angular/ejemplo/src/app/rutas/ruta-login/ruta-login.component.html
@@ -1,1 +1,34 @@
+<app-banner-imagenes>
+</app-banner-imagenes>
 <p>ruta-login works!</p>
+
+<h1>NG FOR</h1>
+<div *ngFor="let usuario of arregloUsuarios;let i = index" >
+  <app-banner-imagenes [color]="usuario.color"
+                       [url]="usuario.link"
+                       [urlImagen]="usuario.linkImagen">
+  </app-banner-imagenes>
+</div>
+<table class="table">
+  <thead>
+    <tr>
+      <th>Indice</th>
+      <th>ID</th>
+      <th>Nombre</th>
+    </tr>
+  </thead>
+  <tbody>
+    <tr *ngFor="let usuario of arregloUsuarios;let i = index" >
+      <td>{{i}}</td>
+      <td>{{usuario.id}}</td>
+      <td>{{usuario.nombre}}</td>
+    </tr>
+  </tbody>
+</table>
+
+<h1>NG IF</h1>
+<button (click)="cambiarOcultarBanner()">
+  {{(mostrarSegundoBanner) ? 'Ocultar' : 'Mostrar'}}
+</button>
+<app-banner-imagenes *ngIf="mostrarSegundoBanner">
+</app-banner-imagenes>
