--- a/3. Angular/examen/src/app/componentes/tarjeta/tarjeta.component.html
+++ b/3. Angular/examen/src/app/componentes/tarjeta/tarjeta.component.html
@@ -1,4 +1,6 @@
-<div class="p-4 my-1 rounded" style="width: 210px;height: 116px;background: white">
-  <img [src]="icono" alt="">
-  <h6 class="py-3">{{nombre}}</h6>
-</div>
+<a class="text-decoration-none text-black" href="">
+  <div class="p-4 my-1 rounded" style="width: 210px;height: 116px;background: white">
+    <img [src]="icono" alt="">
+    <h6 class="py-3">{{nombre}}</h6>
+  </div>
+</a>
