--- a/3. Angular/examen/src/app/componentes/video-explorar/video-explorar.component.html
+++ b/3. Angular/examen/src/app/componentes/video-explorar/video-explorar.component.html
@@ -1,12 +1,12 @@
-<div class="row py-2">
-  <div class="col-3">
-    <img class="img-fluid" [src]="video.linkMiniatura"
-         alt="">
-  </div>
-  <div class="col-auto p-0">
-    <h6 class="my-0">{{video.nombre}}</h6>
-    <p class="py-0 my-0">{{video.creador}} . {{video.cantidadVistas}} visualizaciones . Hace {{video.fecha}}</p>
-    <p class="py-2" style="width: 85%">{{video.descripcion}}</p>
-  </div>
-</div>
+<a class="row py-2 text-decoration-none text-black" href="#">
+    <div class="col-3">
+      <img class="img-fluid" [src]="video.linkMiniatura"
+           alt="" style="max-width: 100%">
+    </div>
+    <div class="col-auto p-0">
+      <h6 class="my-0">{{video.nombre}}</h6>
+      <p class="py-0 my-0">{{video.creador}} . {{video.cantidadVistas}} visualizaciones . Hace {{video.fecha}}</p>
+      <p class="py-2" style="width: 85%">{{video.descripcion}}</p>
+    </div>
+</a>
 
