--- a/Examen/src/app/rutas/ruta-explorar/ruta-explorar.component.html
+++ b/Examen/src/app/rutas/ruta-explorar/ruta-explorar.component.html
@@ -2,10 +2,10 @@
 <div class="container-fluid">
   <div class="row w-100">
     <div class="col-auto p-0" style=" position: fixed; z-index: 1">
-      <app-menu-plegable></app-menu-plegable>
+      <app-menu-plegable [nombre]="'Explorar'"></app-menu-plegable>
     </div>
     <div class="col-auto p-0" style="z-index: 0">
-      <app-sidebar></app-sidebar>
+      <app-sidebar [nombre]="'Explorar'"></app-sidebar>
     </div>
     <div class="col px-5 w-100 p-0" style="z-index: 0">
       <div class="row justify-content-center py-3">
