--- a/Examen/src/app/componentes/novedades/novedades.component.html
+++ b/Examen/src/app/componentes/novedades/novedades.component.html
@@ -1,4 +1,4 @@
-<nav class="navbar py-3 navbar-expand-lg navbar-light bg-light border-top border-bottom " style="position: sticky;top:54px">
+<nav class="navbar py-3 navbar-expand-lg navbar-light bg-light border-top border-bottom sticky-top" style="position: sticky;top:54px">
     <div class="container-fluid">
       <ul class="navbar-nav">
         <li class="px-2">
