--- a/3. Angular/ejemplo/src/app/rutas/ruta-usuario-perfil/ruta-usuario-perfil.component.html
+++ b/3. Angular/ejemplo/src/app/rutas/ruta-usuario-perfil/ruta-usuario-perfil.component.html
@@ -1,1 +1,93 @@
-<p>ruta-usuario-perfil works!</p>
+<div *ngIf="usuarioActual">
+  <p>{{usuarioActual.name}}</p>
+</div>
+<div class="container" *ngIf="formGroup">
+  <form [formGroup]="formGroup">
+    <div class="mb-3">
+      <label for="email"
+             class="form-label">
+        Email
+      </label>
+      <input formControlName="email"
+              type="email"
+             class="form-control"
+             id="email"
+             aria-describedby="emailHelp">
+      <div id="emailHelp"
+           class="form-text">
+        Ingrese un correo.
+      </div>
+    </div>
+    <div *ngIf="formGroup.get('email')">
+      <div class="alert alert-warning" role="alert" *ngIf="formGroup.get('email')?.invalid &&
+                formGroup.get('email')?.touched && formGroup.get('email')?.dirty">
+        <span *ngIf="formGroup.get('email')?.hasError('required')">Correo requerido</span>
+        <span *ngIf="formGroup.get('email')?.hasError('minlength')">Mínimo de 3 caracteres</span>
+      </div>
+    </div>
+    <button class="btn btn-primary"
+            [disabled] = "formGroup.invalid">
+      GUARDAR
+    </button>
+    <!-- name -->
+    <div class="mb-3">
+      <label for="name"
+             class="form-label">
+        Name
+      </label>
+      <input type="text"
+             class="form-control"
+             id="name"
+             aria-describedby="emailHelp">
+      <div id="nameHelp"
+           class="form-text">
+        Ingrese un correo.
+      </div>
+    </div>
+    <!-- phone -->
+    <div class="mb-3">
+      <label for="phone"
+             class="form-label">
+        Phone
+      </label>
+      <input type="text"
+             class="form-control"
+             id="phone"
+             aria-describedby="phonelHelp">
+      <div id="phoneHelp"
+           class="form-text">
+        Ingrese un telefono.
+      </div>
+    </div>
+    <!-- username -->
+    <div class="mb-3">
+      <label for="username"
+             class="form-label">
+        Username
+      </label>
+      <input type="text"
+             class="form-control"
+             id="username"
+             aria-describedby="usernamelHelp">
+      <div id="usernameHelp"
+           class="form-text">
+        Ingrese el username.
+      </div>
+    </div>
+    <!-- Website -->
+    <div class="mb-3">
+      <label for="website"
+             class="form-label">
+        Website
+      </label>
+      <input type="text"
+             class="form-control"
+             id="website"
+             aria-describedby="websiteHelp">
+      <div id="websiteHelp"
+           class="form-text">
+        Ingrese el website.
+      </div>
+    </div>
+  </form>
+</div>
