--- a/3. Angular/ejemplo/src/app/rutas/ruta-usuario-perfil/ruta-usuario-perfil.component.html
+++ b/3. Angular/ejemplo/src/app/rutas/ruta-usuario-perfil/ruta-usuario-perfil.component.html
@@ -41,7 +41,7 @@
         <span *ngIf="formGroup.get('email')?.hasError('minlength')">Mínimo de 3 caracteres</span>
       </div>
     </div>
-    <div class="mb-3">
+    ><div class="mb-3">
       <label for="email"
              class="form-label">
         Es administrador
